# fastapi-rest-db

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
database/: init-db.sql
server/: dbutils.py  main-pydantic.py  main.py  store.py
server/public/: rest.css  rest.js
server/views/: index.html
